fix text overflow problem

--- a/static/styles.css
+++ b/static/styles.css
@@ -33,7 +33,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
-	width: 47%;
+	width: 45%;
 	min-height: 10rem;
 	margin-top: 10px;
 	white-space: normal;
